chat input created frontend

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,3 +1,8 @@
+// Colors variables
 $background-color: #3F444B;
 $primary-color: #BA873E;
 $white: #fff;
+
+// Break-points variables
+$tablet-breakpoint: 768px;
+$desktop-breakpoint: 1280px;
