--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -1,4 +1,5 @@
 @use './variables' as *;
+@use './mixins' as *;
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800;1,6..12,900;1,6..12,1000&display=swap');
 
 
@@ -27,4 +28,27 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 16px;
+
+    @include tablet {
+        padding: 0 25vw;
+    }
+
+    @include desktop {
+        padding: 0 35vw;
+    }
+
+}
+
+.container {
+    background-color: $white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 24px 16px;
+    border-radius: 12px;
+    border: none;
+    max-width: 512px;
 }
