--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,6 +15,7 @@
 
     &__heading {
 
+
         &--primary {
             font-size: 28px;
             color: #000;
@@ -22,6 +23,9 @@
             letter-spacing: 3px;
             margin-top: 16px;
             text-transform: uppercase;
+            text-align: center;
+
+
         }
 
         &--secondary {
@@ -29,6 +33,12 @@
             font-size: 18px;
             color: $primary-color;
             font-weight: 600;
+            text-align: center;
+        }
+
+        &--first {
+            margin-top: -50px;
+            text-transform: none;
         }
     }
 }
